src/stylesheets/content.scss
@import "../../config/variables.scss";

.contentWrapper {
  display: inline-block;
  overflow: auto;
  box-sizing: border-box;
  padding: 20px;
  margin: 20px;
  a {
    color: $blue;
  }
  width: 100%;
  @media (min-width: $break-large) {
    width: 960px;
  }
  background-color: $white;
}

.content {
  box-sizing: border-box;
  text-align: left;
}

